update to get the detail page URL

--- a/griffin-ui/index.html
+++ b/griffin-ui/index.html
@@ -141,7 +141,7 @@
 
     </div>
 
-    <div id="bigChartContainer"  class="big-chart-container" style="display:none;" ng-controller="BigChartCtrl">
+<!--     <div id="bigChartContainer"  class="big-chart-container" style="display:none;" ng-controller="BigChartCtrl">
       <div id="bigChartShow" class="big-chart-content">
         <div class="container-fluid">
           <div class="pull-right" style="position:fixed;right:20px;top:10px;z-index:1050;">
@@ -154,12 +154,11 @@
           </div>
 
           <div class="row">
-            <!--<highchart config="chartConfig" />-->
             <div id="bigChartDiv"></div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="modal fade" id="download-sample" role="dialog" ng-controller="DownloadSampleCtrl">
 		<div class="modal-dialog modal-xg modal-lg">
